Implement  contrast ratio as  QC metric